[package]

name = "nanoui"
version = "0.0.1"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]


[dependencies.inspect]
git = "https://github.com/reem/rust-inspect"

[dependencies.nanovg]
#path = "../nanovg-rs"
git = "https://github.com/KevinKelley/nanovg-rs"

[dependencies.glfw]
#path = "../glfw-rs"
git = "https://github.com/bjz/glfw-rs"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"


#[dependencies.piston]
## path = "../piston"
#git = "https://github.com/PistonDevelopers/piston"
#
#[dependencies.graphics]
#git = "https://github.com/pistondevelopers/rust-graphics"
#
#[dependencies.glfw_game_window]
## path = "../glfw_game_window"
#git = "https://github.com/PistonDevelopers/glfw_game_window"
#
#[dependencies.opengl_graphics]
#git = "https://github.com/PistonDevelopers/opengl_graphics.git"


[lib]
name = "nanoui"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "robinson"
path = "src/robinson/main.rs"

[[bin]]
name = "rendered"
path = "src/robinson/rendered.rs"
